notebooks and data files

--- a/atmodeller/docs/2_planet.ipynb
+++ b/atmodeller/docs/2_planet.ipynb
@@ -14,14 +14,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "from atmodeller import debug_logger\n",
     "from atmodeller.interior_atmosphere import InteriorAtmosphereSystem, Planet, Species\n",
     "from atmodeller.interfaces import GasSpecies\n",
-    "from atmodeller.constraints import SystemConstraint, FugacityConstraint, MassConstraint, ConstantSystemConstraint, SystemConstraints, IronWustiteBufferConstraintHirschmann\n",
+    "#from atmodeller.constraints import SystemConstraint, FugacityConstraint, MassConstraint, ConstantSystemConstraint, SystemConstraints, IronWustiteBufferConstraintHirschmann\n",
     "from atmodeller.solubilities import PeridotiteH2O, BasaltDixonCO2\n",
     "import numpy as np\n",
     "from atmodeller.utilities import earth_oceans_to_kg\n",
@@ -39,9 +39,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[13:49:50 - atmodeller.interior_atmosphere - INFO     ] - Creating a new planet\n",
+      "[13:49:50 - atmodeller.interior_atmosphere - INFO     ] - Mantle mass (kg) = 4208261222595110885130240.000000\n",
+      "[13:49:50 - atmodeller.interior_atmosphere - INFO     ] - Mantle melt fraction = 1.000000\n",
+      "[13:49:50 - atmodeller.interior_atmosphere - INFO     ] - Core mass fraction = 0.295335\n",
+      "[13:49:50 - atmodeller.interior_atmosphere - INFO     ] - Planetary radius (m) = 6371000.000000\n",
+      "[13:49:50 - atmodeller.interior_atmosphere - INFO     ] - Planetary mass (kg) = 5972000000000000327155712.000000\n",
+      "[13:49:50 - atmodeller.interior_atmosphere - INFO     ] - Surface temperature (K) = 2000.000000\n",
+      "[13:49:51 - atmodeller.interior_atmosphere - INFO     ] - Surface gravity (m/s^2) = 9.819973\n",
+      "[13:49:51 - atmodeller.interior_atmosphere - INFO     ] - Melt Composition = None\n"
+     ]
+    }
+   ],
    "source": [
     "planet: Planet = Planet()"
    ]
