Updated fug coeff notebook

--- a/atmodeller/docs/H2FugacityCoeffs_Models.ipynb
+++ b/atmodeller/docs/H2FugacityCoeffs_Models.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,13 +20,13 @@
     "from typing import Type\n",
     "from pytest import approx\n",
     "\n",
-    "from atmodeller.eos.holland import get_holland_eos_models, CORKSimpleCO2HP91, CORKCO2HP98\n",
-    "from atmodeller.eos.saxena import H2LowPressureSS92, H2HighPressureSS92, H2HighPressureSS92_Refit, H2HighPressureSF88, get_saxena_eos_models\n"
+    "from atmodeller.eos.holland import get_holland_eos_models, CO2_CORK_simple_HP91, CO2_CORK_HP98\n",
+    "from atmodeller.eos.saxena import _H2_low_pressure_SS92, _H2_high_pressure_SS92, _H2_high_pressure_SS92_refit, get_saxena_eos_models\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -78,9 +78,9 @@
     }
    ],
    "source": [
-    "SS_model_lo = H2LowPressureSS92\n",
-    "SS_model_hi = H2HighPressureSS92\n",
-    "SS_model_hi_refit = H2HighPressureSS92_Refit\n",
+    "SS_model_lo = _H2_low_pressure_SS92\n",
+    "SS_model_hi = _H2_high_pressure_SS92\n",
+    "SS_model_hi_refit = _H2_high_pressure_SS92_refit\n",
     "\n",
     "\n",
     "SS_model_lo.volume(temperature=673, pressure=5)\n",
@@ -95,26 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "874.921156266643\n"
-     ]
-    }
-   ],
-   "source": [
-    "SF_model_hi = H2HighPressureSF88\n",
-    "\n",
-    "print(SF_model_hi.volume(temperature=2000, pressure=4000)*10)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -123,8 +104,7 @@
      "text": [
       "413.1205180601826\n",
       "1.4001350698336348\n",
-      "6.121820426177431\n",
-      "64.94465786391062\n"
+      "6.121820426177431\n"
      ]
     }
    ],
@@ -138,24 +118,22 @@
     "print(SS_model_H2.volume(temperature=266, pressure=9670))\n",
     "print(SS_model_H2.compressibility_parameter(temperature=266, pressure=9670))\n",
     "\n",
-    "SF_model_H2 = H2HighPressureSF88\n",
-    "\n",
-    "print(SF_model_H2.compressibility_parameter(temperature=266, pressure=9670))"
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "9.105183427350385\n",
-      "8.737929962496636\n",
-      "11.925468216831511\n",
-      "14.044707761444382\n"
+      "8.995391992358009\n",
+      "8.863075311882683\n",
+      "12.009917104020762\n",
+      "14.001350698336347\n"
      ]
     }
    ],
@@ -175,7 +153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -227,7 +205,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -290,7 +268,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -353,7 +331,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -404,7 +382,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -540,7 +518,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -566,45 +544,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Shi and Saxena 1992, All Coefficients: [ 1.02066469e-07  2.11944254e-07  5.67598631e-10  4.59145069e-06\n",
-      "  3.05701259e-11  1.02169911e-04  1.90182359e-12  3.17248298e-08\n",
-      "  5.54605962e-08  4.96060175e-07  5.23400578e-09  2.80775878e-06\n",
-      "  4.62445358e-10 -3.74871652e-07  4.04910278e-11  1.27564782e-07\n",
-      "  3.42167973e-06  2.06970671e-05  4.20529591e-07 -1.22541597e-06\n",
-      "  5.35323893e-08  1.49533352e-08  7.18397985e-09  7.00940513e-06\n",
-      "  3.55544387e-07  2.30499179e-08 -2.23053847e-06 -2.40225720e-10\n",
-      "  4.51057396e-06  2.12507121e-13  1.85743628e-06 -2.19622511e-07]\n",
-      "\n",
       "Shi and Saxena 1992, Select Coefficients: [ 1.00574428e+00  1.93022092e-03 -3.79261142e-01 -2.44217972e-03\n",
       "  1.31517888e-03  7.22328441e-02  4.84354163e-02 -4.19624507e-04\n",
       "  2.64454401e-06 -5.18445629e-05 -2.05045979e-04 -3.64843213e-07\n",
       "  2.28281107e-11 -1.07138603e-08  3.67720815e-07]\n",
-      "\n",
-      "Shi and Saxena 1992, Select Coefficients, Not Reduced: [ 1.02120490e-04  1.87089486e-07  7.09414894e-10  6.40962752e-04\n",
-      "  6.06165868e-03  2.67699320e-04  1.72412150e-06 -5.68858134e-04\n",
-      " -1.29935894e-06 -1.26683965e-04  1.03993207e-02  7.80700467e-08\n",
-      " -9.66964024e-13  2.38893790e-08  7.39428706e-07]\n"
+      "\n"
      ]
     }
    ],
    "source": [
-    "print('Shi and Saxena 1992, All Coefficients:', SS92_Coeffs)\n",
-    "print('')\n",
+    "#print('Shi and Saxena 1992, All Coefficients:', SS92_Coeffs)\n",
+    "#print('')\n",
     "print('Shi and Saxena 1992, Select Coefficients:', SS92_Coeffs_select)\n",
     "print('')\n",
-    "print('Shi and Saxena 1992, Select Coefficients, Not Reduced:', SS92_Coeffs_select_notred)\n"
+    "#print('Shi and Saxena 1992, Select Coefficients, Not Reduced:', SS92_Coeffs_select_notred)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
