Updates to science cases notebook

--- a/atmodeller/docs/4_sciencecases.ipynb
+++ b/atmodeller/docs/4_sciencecases.ipynb
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,7 +38,7 @@
     "    ThermodynamicData,\n",
     "    ThermodynamicDataBase,\n",
     ")\n",
-    "from atmodeller.solubilities import PeridotiteH2O, BasaltDixonCO2, BasaltLibourelN2, BasaltDixonH2O, BasaltS2, BasaltH2, BasaltCO\n",
+    "from atmodeller.solubilities import PeridotiteH2O, BasaltDixonCO2, BasaltLibourelN2, BasaltDixonH2O, BasaltS2, BasaltH2, BasaltCO, BasaltLibourelN2, BasaltCH4, BasaltHe, BasaltCl2\n",
     "from atmodeller.utilities import earth_oceans_to_kg\n",
     "import numpy as np\n",
     "import csv\n",
@@ -90,21 +90,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[15:21:50 - atmodeller.interfaces          - INFO     ] - Creating a GasSpecies: H2O (H2O)\n",
+      "[15:21:50 - atmodeller.interfaces          - INFO     ] - Creating a GasSpecies: H2 (H2)\n",
+      "[15:21:50 - atmodeller.interfaces          - INFO     ] - Creating a GasSpecies: O2 (O2)\n",
+      "[15:21:50 - atmodeller.interfaces          - INFO     ] - Creating a GasSpecies: CO (CO)\n",
+      "[15:21:50 - atmodeller.interfaces          - INFO     ] - Creating a GasSpecies: CO2 (CO2)\n",
+      "[15:21:50 - atmodeller.interfaces          - INFO     ] - Creating a GasSpecies: CH4 (CH4)\n",
+      "[15:21:50 - atmodeller.interfaces          - INFO     ] - Creating a GasSpecies: N2 (N2)\n",
+      "[15:21:50 - atmodeller.interfaces          - INFO     ] - Creating a GasSpecies: Cl2 (Cl2)\n",
+      "[15:21:51 - atmodeller.interfaces          - INFO     ] - Creating a GasSpecies: S2 (S2)\n",
+      "[15:21:51 - atmodeller.interfaces          - INFO     ] - Creating a GasSpecies: H2S (H2S)\n",
+      "[15:21:51 - atmodeller.interfaces          - INFO     ] - Creating a GasSpecies: SO2 (SO2)\n"
+     ]
+    },
+    {
      "data": {
       "text/plain": [
-       "Species([GasSpecies(chemical_formula='H2O', name_in_thermodynamic_data='H2O', thermodynamic_class=<class 'atmodeller.interfaces.ThermodynamicDataJANAF'>, formula=Formula('H2O'), thermodynamic_data=<atmodeller.interfaces.ThermodynamicDataJANAF object at 0x124f2c8d0>, output=None, solubility=<atmodeller.solubilities.BasaltDixonH2O object at 0x124ea8810>, solid_melt_distribution_coefficient=0, eos=IdealGas(critical_temperature=1, critical_pressure=1, standard_state_pressure=1)),\n",
-       "         GasSpecies(chemical_formula='H2', name_in_thermodynamic_data='H2', thermodynamic_class=<class 'atmodeller.interfaces.ThermodynamicDataJANAF'>, formula=Formula('H2'), thermodynamic_data=<atmodeller.interfaces.ThermodynamicDataJANAF object at 0x124c4a850>, output=None, solubility=<atmodeller.solubilities.BasaltH2 object at 0x124e79550>, solid_melt_distribution_coefficient=0, eos=IdealGas(critical_temperature=1, critical_pressure=1, standard_state_pressure=1)),\n",
-       "         GasSpecies(chemical_formula='O2', name_in_thermodynamic_data='O2', thermodynamic_class=<class 'atmodeller.interfaces.ThermodynamicDataJANAF'>, formula=Formula('O2'), thermodynamic_data=<atmodeller.interfaces.ThermodynamicDataJANAF object at 0x124ce2150>, output=None, solubility=<atmodeller.interfaces.NoSolubility object at 0x124933110>, solid_melt_distribution_coefficient=0, eos=IdealGas(critical_temperature=1, critical_pressure=1, standard_state_pressure=1)),\n",
-       "         GasSpecies(chemical_formula='CO', name_in_thermodynamic_data='CO', thermodynamic_class=<class 'atmodeller.interfaces.ThermodynamicDataJANAF'>, formula=Formula('CO'), thermodynamic_data=<atmodeller.interfaces.ThermodynamicDataJANAF object at 0x12493c150>, output=None, solubility=<atmodeller.interfaces.NoSolubility object at 0x124ce2190>, solid_melt_distribution_coefficient=0, eos=IdealGas(critical_temperature=1, critical_pressure=1, standard_state_pressure=1)),\n",
-       "         GasSpecies(chemical_formula='CO2', name_in_thermodynamic_data='CO2', thermodynamic_class=<class 'atmodeller.interfaces.ThermodynamicDataJANAF'>, formula=Formula('CO2'), thermodynamic_data=<atmodeller.interfaces.ThermodynamicDataJANAF object at 0x125013f50>, output=None, solubility=<atmodeller.solubilities.BasaltDixonCO2 object at 0x124bf5e90>, solid_melt_distribution_coefficient=0, eos=IdealGas(critical_temperature=1, critical_pressure=1, standard_state_pressure=1)),\n",
-       "         GasSpecies(chemical_formula='N2', name_in_thermodynamic_data='N2', thermodynamic_class=<class 'atmodeller.interfaces.ThermodynamicDataJANAF'>, formula=Formula('N2'), thermodynamic_data=<atmodeller.interfaces.ThermodynamicDataJANAF object at 0x12501bed0>, output=None, solubility=<atmodeller.solubilities.BasaltLibourelN2 object at 0x12501bf10>, solid_melt_distribution_coefficient=0, eos=IdealGas(critical_temperature=1, critical_pressure=1, standard_state_pressure=1))])"
+       "Species([GasSpecies(chemical_formula='H2O', name_in_thermodynamic_data='H2O', thermodynamic_class=<class 'atmodeller.interfaces.ThermodynamicDataJANAF'>, formula=Formula('H2O'), thermodynamic_data=<atmodeller.interfaces.ThermodynamicDataJANAF object at 0x1277e2390>, output=None, solubility=<atmodeller.solubilities.BasaltDixonH2O object at 0x12783d890>, solid_melt_distribution_coefficient=0, eos=IdealGas(critical_temperature=1, critical_pressure=1, standard_state_pressure=1)),\n",
+       "         GasSpecies(chemical_formula='H2', name_in_thermodynamic_data='H2', thermodynamic_class=<class 'atmodeller.interfaces.ThermodynamicDataJANAF'>, formula=Formula('H2'), thermodynamic_data=<atmodeller.interfaces.ThermodynamicDataJANAF object at 0x126ed48d0>, output=None, solubility=<atmodeller.solubilities.BasaltH2 object at 0x126d03d10>, solid_melt_distribution_coefficient=0, eos=IdealGas(critical_temperature=1, critical_pressure=1, standard_state_pressure=1)),\n",
+       "         GasSpecies(chemical_formula='O2', name_in_thermodynamic_data='O2', thermodynamic_class=<class 'atmodeller.interfaces.ThermodynamicDataJANAF'>, formula=Formula('O2'), thermodynamic_data=<atmodeller.interfaces.ThermodynamicDataJANAF object at 0x127789310>, output=None, solubility=<atmodeller.interfaces.NoSolubility object at 0x127789510>, solid_melt_distribution_coefficient=0, eos=IdealGas(critical_temperature=1, critical_pressure=1, standard_state_pressure=1)),\n",
+       "         GasSpecies(chemical_formula='CO', name_in_thermodynamic_data='CO', thermodynamic_class=<class 'atmodeller.interfaces.ThermodynamicDataJANAF'>, formula=Formula('CO'), thermodynamic_data=<atmodeller.interfaces.ThermodynamicDataJANAF object at 0x1270a8750>, output=None, solubility=<atmodeller.solubilities.BasaltCO object at 0x1270a80d0>, solid_melt_distribution_coefficient=0, eos=IdealGas(critical_temperature=1, critical_pressure=1, standard_state_pressure=1)),\n",
+       "         GasSpecies(chemical_formula='CO2', name_in_thermodynamic_data='CO2', thermodynamic_class=<class 'atmodeller.interfaces.ThermodynamicDataJANAF'>, formula=Formula('CO2'), thermodynamic_data=<atmodeller.interfaces.ThermodynamicDataJANAF object at 0x127777cd0>, output=None, solubility=<atmodeller.solubilities.BasaltDixonCO2 object at 0x127777050>, solid_melt_distribution_coefficient=0, eos=IdealGas(critical_temperature=1, critical_pressure=1, standard_state_pressure=1)),\n",
+       "         GasSpecies(chemical_formula='CH4', name_in_thermodynamic_data='CH4', thermodynamic_class=<class 'atmodeller.interfaces.ThermodynamicDataJANAF'>, formula=Formula('CH4'), thermodynamic_data=<atmodeller.interfaces.ThermodynamicDataJANAF object at 0x127821450>, output=None, solubility=<atmodeller.solubilities.BasaltCH4 object at 0x125e1f750>, solid_melt_distribution_coefficient=0, eos=IdealGas(critical_temperature=1, critical_pressure=1, standard_state_pressure=1)),\n",
+       "         GasSpecies(chemical_formula='N2', name_in_thermodynamic_data='N2', thermodynamic_class=<class 'atmodeller.interfaces.ThermodynamicDataJANAF'>, formula=Formula('N2'), thermodynamic_data=<atmodeller.interfaces.ThermodynamicDataJANAF object at 0x1277c94d0>, output=None, solubility=<atmodeller.solubilities.BasaltLibourelN2 object at 0x1277cb3d0>, solid_melt_distribution_coefficient=0, eos=IdealGas(critical_temperature=1, critical_pressure=1, standard_state_pressure=1)),\n",
+       "         GasSpecies(chemical_formula='Cl2', name_in_thermodynamic_data='Cl2', thermodynamic_class=<class 'atmodeller.interfaces.ThermodynamicDataJANAF'>, formula=Formula('Cl2'), thermodynamic_data=<atmodeller.interfaces.ThermodynamicDataJANAF object at 0x1277b4990>, output=None, solubility=<atmodeller.solubilities.BasaltCl2 object at 0x1277b6cd0>, solid_melt_distribution_coefficient=0, eos=IdealGas(critical_temperature=1, critical_pressure=1, standard_state_pressure=1)),\n",
+       "         GasSpecies(chemical_formula='S2', name_in_thermodynamic_data='S2', thermodynamic_class=<class 'atmodeller.interfaces.ThermodynamicDataJANAF'>, formula=Formula('S2'), thermodynamic_data=<atmodeller.interfaces.ThermodynamicDataJANAF object at 0x1278706d0>, output=None, solubility=<atmodeller.solubilities.BasaltS2 object at 0x127870790>, solid_melt_distribution_coefficient=0, eos=IdealGas(critical_temperature=1, critical_pressure=1, standard_state_pressure=1)),\n",
+       "         GasSpecies(chemical_formula='H2S', name_in_thermodynamic_data='H2S', thermodynamic_class=<class 'atmodeller.interfaces.ThermodynamicDataJANAF'>, formula=Formula('H2S'), thermodynamic_data=<atmodeller.interfaces.ThermodynamicDataJANAF object at 0x1275a09d0>, output=None, solubility=<atmodeller.interfaces.NoSolubility object at 0x1270b1650>, solid_melt_distribution_coefficient=0, eos=IdealGas(critical_temperature=1, critical_pressure=1, standard_state_pressure=1)),\n",
+       "         GasSpecies(chemical_formula='SO2', name_in_thermodynamic_data='SO2', thermodynamic_class=<class 'atmodeller.interfaces.ThermodynamicDataJANAF'>, formula=Formula('SO2'), thermodynamic_data=<atmodeller.interfaces.ThermodynamicDataJANAF object at 0x127107b50>, output=None, solubility=<atmodeller.interfaces.NoSolubility object at 0x126ce55d0>, solid_melt_distribution_coefficient=0, eos=IdealGas(critical_temperature=1, critical_pressure=1, standard_state_pressure=1))])"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -113,27 +135,72 @@
     "species: Species = Species()\n",
     "species.append(GasSpecies(chemical_formula='H2O', solubility=BasaltDixonH2O()))\n",
     "species.append(GasSpecies(chemical_formula='H2', solubility=BasaltH2()))\n",
+    "#species.append(GasSpecies(chemical_formula='He', solubility=BasaltHe()))\n",
     "species.append(GasSpecies(chemical_formula='O2'))\n",
-    "species.append(GasSpecies(chemical_formula='CO'))\n",
+    "species.append(GasSpecies(chemical_formula='CO', solubility=BasaltCO()))\n",
     "species.append(GasSpecies(chemical_formula='CO2', solubility=BasaltDixonCO2()))\n",
+    "species.append(GasSpecies(chemical_formula='CH4', solubility=BasaltCH4()))\n",
     "species.append(GasSpecies(chemical_formula='N2', solubility=BasaltLibourelN2()))\n",
+    "species.append(GasSpecies(chemical_formula='Cl2', solubility=BasaltCl2()))\n",
+    "species.append(GasSpecies(chemical_formula='S2', solubility=BasaltS2()))\n",
+    "species.append(GasSpecies(chemical_formula='H2S'))\n",
+    "species.append(GasSpecies(chemical_formula='SO2'))\n",
+    "\n",
     "species"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[15:23:26 - atmodeller.interior_atmosphere - INFO     ] - Creating a new planet\n",
+      "[15:23:26 - atmodeller.interior_atmosphere - INFO     ] - Mantle mass (kg) = 3248999999999999788187648.000000\n",
+      "[15:23:26 - atmodeller.interior_atmosphere - INFO     ] - Mantle melt fraction = 1.000000\n",
+      "[15:23:26 - atmodeller.interior_atmosphere - INFO     ] - Core mass fraction = 0.295335\n",
+      "[15:23:26 - atmodeller.interior_atmosphere - INFO     ] - Planetary radius (m) = 5804000.000000\n",
+      "[15:23:26 - atmodeller.interior_atmosphere - INFO     ] - Planetary mass (kg) = 4610699520224821698887680.000000\n",
+      "[15:23:26 - atmodeller.interior_atmosphere - INFO     ] - Surface temperature (K) = 1500.000000\n",
+      "[15:23:26 - atmodeller.interior_atmosphere - INFO     ] - Surface gravity (m/s^2) = 9.135193\n",
+      "[15:23:26 - atmodeller.interior_atmosphere - INFO     ] - Melt Composition = None\n"
+     ]
+    }
+   ],
    "source": [
-    "planet: Planet = Planet(surface_temperature=270, mantle_mass = 3.249E24, surface_radius = 5.804E6)\n"
+    "planet: Planet = Planet(surface_temperature=1500, mantle_mass = 3.249E24, surface_radius = 5.804E6, mantle_melt_fraction=1)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[15:22:43 - atmodeller.interior_atmosphere - INFO     ] - Creating an interior-atmosphere system\n",
+      "[15:22:43 - atmodeller.interior_atmosphere - INFO     ] - Creating a reaction network\n",
+      "[15:22:43 - atmodeller.interior_atmosphere - INFO     ] - Species = ['H2O', 'H2', 'O2', 'CO', 'CO2', 'CH4', 'N2', 'Cl2', 'S2', 'H2S', 'SO2']\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[15:22:43 - atmodeller.interior_atmosphere - INFO     ] - Reactions = \n",
+      "{0: '1.0 H2 + 0.5 O2 = 1.0 H2O',\n",
+      " 1: '2.0 H2 + 1.0 CO = 0.5 O2 + 1.0 CH4',\n",
+      " 2: '0.5 O2 + 1.0 CO = 1.0 CO2',\n",
+      " 3: '1.0 H2 + 0.5 S2 = 1.0 H2S',\n",
+      " 4: '1.0 O2 + 0.5 S2 = 1.0 SO2'}\n"
+     ]
+    }
+   ],
    "source": [
     "interior_atmosphere: InteriorAtmosphereSystem = InteriorAtmosphereSystem(species=species, planet=planet)"
    ]
@@ -142,53 +209,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Vary fO2"
+    "### Monte Carlo Analysis "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Species([GasSpecies(chemical_formula='H2O', name_in_thermodynamic_data='H2O', thermodynamic_class=<class 'atmodeller.interfaces.ThermodynamicDataJANAF'>, formula=Formula('H2O'), thermodynamic_data=<atmodeller.interfaces.ThermodynamicDataJANAF object at 0x11a676790>, output=None, solubility=<atmodeller.solubilities.BasaltDixonH2O object at 0x11a676710>, solid_melt_distribution_coefficient=0, eos=IdealGas(critical_temperature=1, critical_pressure=1, standard_state_pressure=1)),\n",
-       "         GasSpecies(chemical_formula='H2', name_in_thermodynamic_data='H2', thermodynamic_class=<class 'atmodeller.interfaces.ThermodynamicDataJANAF'>, formula=Formula('H2'), thermodynamic_data=<atmodeller.interfaces.ThermodynamicDataJANAF object at 0x11a6abf50>, output=None, solubility=<atmodeller.solubilities.BasaltH2 object at 0x1191b6390>, solid_melt_distribution_coefficient=0, eos=IdealGas(critical_temperature=1, critical_pressure=1, standard_state_pressure=1)),\n",
-       "         GasSpecies(chemical_formula='O2', name_in_thermodynamic_data='O2', thermodynamic_class=<class 'atmodeller.interfaces.ThermodynamicDataJANAF'>, formula=Formula('O2'), thermodynamic_data=<atmodeller.interfaces.ThermodynamicDataJANAF object at 0x11a676e10>, output=None, solubility=<atmodeller.interfaces.NoSolubility object at 0x11a6755d0>, solid_melt_distribution_coefficient=0, eos=IdealGas(critical_temperature=1, critical_pressure=1, standard_state_pressure=1)),\n",
-       "         GasSpecies(chemical_formula='CO2', name_in_thermodynamic_data='CO2', thermodynamic_class=<class 'atmodeller.interfaces.ThermodynamicDataJANAF'>, formula=Formula('CO2'), thermodynamic_data=<atmodeller.interfaces.ThermodynamicDataJANAF object at 0x11a6ab950>, output=None, solubility=<atmodeller.solubilities.BasaltDixonCO2 object at 0x11a6ab990>, solid_melt_distribution_coefficient=0, eos=IdealGas(critical_temperature=1, critical_pressure=1, standard_state_pressure=1)),\n",
-       "         GasSpecies(chemical_formula='CO', name_in_thermodynamic_data='CO', thermodynamic_class=<class 'atmodeller.interfaces.ThermodynamicDataJANAF'>, formula=Formula('CO'), thermodynamic_data=<atmodeller.interfaces.ThermodynamicDataJANAF object at 0x11a583650>, output=None, solubility=<atmodeller.interfaces.NoSolubility object at 0x11a581e10>, solid_melt_distribution_coefficient=0, eos=IdealGas(critical_temperature=1, critical_pressure=1, standard_state_pressure=1))])"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "species: Species = Species()\n",
-    "species.append(GasSpecies(chemical_formula='H2O', solubility=BasaltDixonH2O()))\n",
-    "species.append(GasSpecies(chemical_formula='H2', solubility=BasaltH2()))\n",
-    "species.append(GasSpecies(chemical_formula='O2'))\n",
-    "species.append(GasSpecies(chemical_formula='CO2', solubility=BasaltDixonCO2()))\n",
-    "species.append(GasSpecies(chemical_formula='CO'))\n",
-    "\n",
-    "species"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "planet: Planet = Planet(surface_temperature=2000, mantle_mass = 3.249E24, surface_radius = 5.804E6, mantle_melt_fraction=1)\n",
-    "interior_atmosphere: InteriorAtmosphereSystem = InteriorAtmosphereSystem(species=species, planet=planet)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -202,15 +228,16 @@
     }
    ],
    "source": [
-    "#Vary fO2:\n",
-    "number_of_realisations: int = 9\n",
+    "#Set-up the Parameters to explore:\n",
+    "number_of_realisations = 10\n",
     "\n",
-    "number_Earth_oceans: float = 1\n",
     "# Parameters are normally distributed between bounds.\n",
-    "fo2_shifts: np.ndarray = np.arange(-4, 5)\n",
-    "print(fo2_shifts)\n",
-    "print(len(fo2_shifts))\n",
-    "print(fo2_shifts[8])"
+    "number_ocean_moles = np.random.uniform(1, 10, number_of_realisations)\n",
+    "ch_ratios = np.random.uniform(0.1, 1, number_of_realisations)\n",
+    "fo2_shifts = np.random.uniform(-4, 4, number_of_realisations)\n",
+    "\n",
+    "# Store the output in a list.\n",
+    "out = []\n"
    ]
   },
   {
